# agents-pset-1-code

pset-1-code-rl/: .gitignore  README.md  part2.md  problem22.md  train.py  train.py.bak
pset-1-code-rl/tinker_utils/: qwen.py
pset-1-simplecoder-agent/: .gitignore  README.md  pyproject.toml
pset-1-simplecoder-agent/simplecoder/: README.md  agent.py  context.py  permissions.py  planner.py  rag.py  requirements.txt  tools.py
